# PlatformerSFML

./: LICENSE  README.md
MarioGame/: Animator.h  CMakeLists.txt  Game.cpp  Game.h  Map.cpp  Map.h  Mario.cpp  Mario.h  MarioGame.vcxproj  MarioGame.vcxproj.filters  MarioState.h  main.cpp  packages.config
MarioGame/MarioGame/Release/MarioGame.tlog/: CL.command.1.tlog  CL.write.1.tlog  MarioGame.lastbuildstate
MarioGame/MarioGame/x64/Debug/: MarioGame.exe.recipe  MarioGame.ilk  vc143.idb
MarioGame/TiledMaps/: Level1.tmx
MarioGame/assets/TiledMaps/: Level1.tmx  Level1.tsx
MarioGame/include/: Game.h
MarioGame/include/Algorythms/: Math.h  TClock.h
MarioGame/include/Managers/: Animator.h  AudioManager.h  CollisionManager.h  EventBus.h  Map.h
MarioGame/include/Objects/: Block.h  FireBall.h  Flag.h  Item.h  Mario.h
MarioGame/include/Objects/Items/: MushRoom.h
MarioGame/src/: Animator.cpp  Animator.h  AudioManager.cpp  Block.h  Brick.cpp  Brick.h  CollisionManager.cpp  CollisionManager.h  FireBall.cpp  FireFlower.cpp  Flag.cpp  Game.cpp  Game.h  GameObject.h  GameState.cpp  Item.cpp  Item.h  LuckyBlock.cpp  LuckyBlock.h  Map.cpp  Map.h  Mario.cpp  Mario.h  MarioState.cpp  MarioState.h  Math.h  MushRoom.cpp  MushRoom.h  QuadTree.cpp  TClock.cpp  TClock.h  Text.h  TextureManager.cpp  main.cpp
MarioGame/src/Algorythms/: QuadTree.cpp  QuadTree.h
MarioGame/src/Manager/: TextureManager.h
MarioGame/src/Objects/: FireBall.cpp  FireBall.h  Flag.cpp  Flag.h
MarioGame/x64/Debug/: MarioGame.exp  MarioGame.lib
MarioGame/x64/Release/: MarioGame.exp  MarioGame.lib
(+108 files in other folders)
